--- a/WebContent/Exam1/form_m.html
+++ b/WebContent/Exam1/form_m.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<form action="para.jsp" method="get">
+<form action="para_m.jsp" method="get">
 
 <input type="text" name="a">
 <input type="text" name="b">
