--- a/WebContent/ajax/login/07-login.html
+++ b/WebContent/ajax/login/07-login.html
@@ -87,7 +87,7 @@
         </style>
 
         <!-- jQuery Framework 참조하기 -->
-        <script type="text/javascript" src="../js/jquery-1.11.0.min.js"></script>
+        <script type="text/javascript" src="../../js/jquery-1.11.0.min.js"></script>
         <!-- 사용자 스크립트 블록 -->
         <script type="text/javascript">
             $(function() {
@@ -131,7 +131,7 @@
                     /** 로그인처리에 대한 PHP예시 */
                     //var url = "../ajax/login/login.php";
                     /** 로그인처리에 대한 JSP예시 */
-                    var url = "../ajax/login/login.jsp";
+                    var url = "login.jsp";
 					
                     var se = $(this).serialize();
 					console.log(se);
