--- a/WebContent/ajax/xml/05-xml(2).html
+++ b/WebContent/ajax/xml/05-xml(2).html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" type="text/css" href="css/common.css"/>
 
 		<!-- jQuery Framework 참조하기 -->
-		<script type="text/javascript" src="../js/jquery-1.11.0.min.js"></script>
+		<script type="text/javascript" src="../../js/jquery-1.11.0.min.js"></script>
 
 		<!-- 사용자 스크립트 블록 -->
 		<script type="text/javascript">
@@ -18,7 +18,7 @@
 				$("#mybtn").click(function() {
 					$.ajax({
 						//url: "ajax/xml/04.xml",
-						url: "../ajax/xml/xmldata.jsp",						
+						url: "xmldata.jsp",						
 						type: "get",
 						data: "keyword=app",
 						dataType: "xml",
