--- a/WebContent/fileSave/NewFile.html
+++ b/WebContent/fileSave/NewFile.html
@@ -5,6 +5,6 @@
 <title>Insert title here</title>
 </head>
 <body>
-<!-- 그냥 임의의 파일이 하나는 있어야 파일이 올라간다. -->
+<!-- 업로드 되는 파일 저장 폴더, 그냥 임의의 파일이 하나는 있어야 파일이 올라간다. -->
 </body>
 </html>
