--- a/WebContent/ajax/idcheck/06-idcheck.html
+++ b/WebContent/ajax/idcheck/06-idcheck.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" type="text/css" href="css/common.css"/>
 
 		<!-- jQuery Framework 참조하기 -->
-		<script type="text/javascript" src="../js/jquery-1.11.0.min.js"></script>
+		<script type="text/javascript" src="../../js/jquery-1.11.0.min.js"></script>
 
 		<!-- 사용자 스크립트 블록 -->
 		<script type="text/javascript">
@@ -32,7 +32,7 @@
 					// 실습용 URL - 아이디중복됨
 					// var url = "../ajax/idcheck/idcheck_fail.xml";
 					// 웹 프로그래밍 연동 (JSP)
-					 var url = "../ajax/idcheck/idcheck.jsp";
+					 var url = "idcheck.jsp";
 
 					/** get방식 ajax 연동 */
 					$.get(url, {
