--- a/WebContent/ajax/xml/04-xml(1).html
+++ b/WebContent/ajax/xml/04-xml(1).html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" type="text/css" href="../css/common.css"/>
 
 		<!-- jQuery Framework 참조하기 -->
-		<script type="text/javascript" src="../js/jquery-1.11.0.min.js"></script>
+		<script type="text/javascript" src="../../js/jquery-1.11.0.min.js"></script>
 
 		<!-- 사용자 스크립트 블록 -->
 		<script type="text/javascript">
@@ -16,7 +16,7 @@
 			$(function() {
 				$("#mybtn").click(function() {
 					$.ajax({
-						url: "../ajax/xml/03.xml",
+						url: "03.xml",
 						type: "get",
 						dataType: "xml",
 						cache: false,
